Add Swift container to GitHub Actions workflow

--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-22.04
+    container:
+      image: swift:6.2-noble
 
     steps:
       - name: Checkout code
