new attempt on fixing CI

--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -16,5 +16,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run tests
-        run: swift test
+      - name: Install System SQLite
+        run: |
+          apt-get update
+          apt-get install -y libsqlite3-dev
+
+      - name: Fix Git permissions
+        run: git config --global --add safe.directory '*'
+
+      - name: Resolve & Test
+        run: |
+          swift package clean
+          swift package resolve
+          swift test
